Подключение контекста БД в основном приложении в качестве сервиса

--- a/WebStore/appsettings.json
+++ b/WebStore/appsettings.json
@@ -1,4 +1,5 @@
 ﻿{
+  "ConnectionStrings": { "MSSQL": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=StoreDB" },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,5 +8,5 @@
     }
   },
   "AllowedHosts": "*",
-  "Greetings" : "Hello there!!!"
+  "Greetings": "Hello there!!!"
 }
