Сервис для работы с товарами через контекст БД

--- a/WebStore/appsettings.json
+++ b/WebStore/appsettings.json
@@ -8,5 +8,6 @@
     }
   },
   "AllowedHosts": "*",
-  "Greetings": "Hello there!!!"
+  "Greetings": "Hello there!!!",
+  "ProductDataSource":  "db"
 }
